@@ -1,5 +1,5 @@
 setglobal user       'tester'
-setglobal fullname   'John Q. Tester' 
+setglobal fullname   'Jörn Q. Tester' 
 setglobal password   'tester1'
 setglobal email      'test@example.com'
 setglobal user2	     'tester2'
