@@ -154,14 +154,16 @@
 
   <opencore:menuitem
      name="People"
-     filter=".viewlet.portal_people_or_projects"
+     filter=".viewlet.contained_within"
+     container="opencore.interfaces.IOpenSiteRoot"
      url=".viewlet.people_url"
      sort_order="10"
      />
 
   <opencore:menuitem
      name="Projects"
-     filter=".viewlet.portal_people_or_projects"
+     filter=".viewlet.contained_within"
+     container="opencore.interfaces.IOpenSiteRoot"
      url=".viewlet.projects_url"
      selected=".viewlet.if_projects_selected"
      sort_order="20"
@@ -169,35 +171,8 @@
 
   <opencore:menuitem
      name="Start A Project"
-     filter=".viewlet.portal_people_or_projects"
-     url=".viewlet.project_create_url"
-     sort_order="30"
-     />
-
-  <opencore:menuitem
-     name="news_People"
-     text="People"
      filter=".viewlet.contained_within"
-     container="opencore.interfaces.IAmANewsFolder"
-     url=".viewlet.people_url"
-     sort_order="10"
-     />
-
-  <opencore:menuitem
-     name="news_Projects"
-     text="Projects"
-     filter=".viewlet.contained_within"
-     container="opencore.interfaces.IAmANewsFolder"
-     url=".viewlet.projects_url"
-     selected=".viewlet.if_projects_selected"
-     sort_order="20"
-     />
-
-  <opencore:menuitem
-     name="news_Start_A_Project"
-     text="Start A Project"
-     filter=".viewlet.contained_within"
-     container="opencore.interfaces.IAmANewsFolder"
+     container="opencore.interfaces.IOpenSiteRoot"
      url=".viewlet.project_create_url"
      sort_order="30"
      />
