@@ -92,10 +92,14 @@
      filter="opencore.browser.topnav.viewlet.contained_within"
      container="opencore.featurelets.interfaces.IListenFeatureletInstalled"
      item_url="lists"
-     sort_order="30"
+     sort_order="31"
      />
 
-
-
+  <browser:page
+     for="opencore.listen.interfaces.IListenFeatureletInstalled"
+     class="opencore.listen.browser.contact_team.ContactTeamView"
+     permission="zope2.View"
+     name="contact-team"
+     />
 
 </configure>
