@@ -2,8 +2,7 @@
 <metal:login-info define-macro="login-info">
   <div class="oc-headingBlock" >
     <h1 class="fn nickname"
-      tal:define="mem_title nocall:context/@@oc-utils/member_title"
-      tal:content="python:mem_title(memberdata)" />
+      tal:content="memberdata/opencore:member_title" />
     <p class="oc-headingContext oc-discreetText"
       i18n:translate="member_macros_date_stats">
       member since
@@ -20,7 +19,7 @@
     <h2 i18n:translate="member_macros_recent_activity">Recent activity</h2>
     <div class="oc-widget oc-widget-lastModified">
       <div class="oc-headingBlock">
-        <h3 i18n:translate="member_macros_pages_modified">Pages last modified by <span i18n:name="member" tal:define="mem_title nocall:context/@@oc-utils/member_title" tal:replace="python:mem_title(memberdata)" /></h3>
+        <h3 i18n:translate="member_macros_pages_modified">Pages last modified by <span i18n:name="member" tal:replace="memberdata/opencore:member_title" /></h3>
       </div><!-- end .oc-headingBlock -->
       <table class="oc-dataTable" cellpadding="0" cellspacing="0">
         <thead>
